# cow

./: CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
.tickets/: cow-0et3.md  cow-1t0b.md  cow-3r5e.md  cow-5ol0.md  cow-63m9.md  cow-65jp.md  cow-66zj.md  cow-6ksh.md  cow-6ml1.md  cow-8per.md  cow-8q1a.md  cow-9bcv.md  cow-9p7x.md  cow-9rgd.md  cow-b3so.md  cow-bprz.md  cow-bqy8.md  cow-c6is.md  cow-c930.md  cow-d49r.md  cow-dt2p.md  cow-dxos.md  cow-f7ty.md  cow-g0c8.md  cow-gayk.md  cow-gpp4.md  cow-hfyg.md  cow-hzjl.md  cow-i13e.md  cow-in79.md  cow-ints.md  cow-j0j0.md  cow-jswp.md  cow-lwfo.md  cow-najj.md  cow-obhm.md  cow-p00x.md  cow-pazi.md  cow-ph3p.md  cow-qc8q.md  (+53 more)
docs/: changelog.html  docs.html  index.html
main/.claude/skills/release/: SKILL.md
src/: apfs.rs  cli.rs  main.rs  state.rs  vcs.rs
src/commands/: cd.rs  create.rs  diff.rs  extract.rs  fetch_from.rs  gc.rs  install.rs  list.rs  materialise.rs  mcp.rs  migrate.rs  mod.rs  recreate.rs  remove.rs  run_cmd.rs  stats.rs  status.rs  sync.rs
tests/: integration.rs
web/: index.html
