[package]
name = "sparse-worktree"
version = "0.1.0"
edition = "2021"
description = "Copy-on-write workspace manager for parallel development"
authors = ["Joe"]
license = "MIT"
homepage = "https://github.com/joeinn.es/sparse-worktree"
repository = "https://github.com/joeinn.es/sparse-worktree"
keywords = ["git", "workspace", "apfs", "copy-on-write", "development"]

[[bin]]
name = "swt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
glob = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = 3
