[package]
name = "cow-cli"
version = "0.1.6"
edition = "2021"
description = "Copy-on-write workspace manager for parallel development"
authors = ["Joe Innes"]
license = "MIT"
homepage = "https://github.com/joeinnes/cow"
repository = "https://github.com/joeinnes/cow"
readme = "README.md"
keywords = ["git", "workspace", "apfs", "copy-on-write", "development"]

[[bin]]
name = "cow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
dirs = "5"
glob = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[profile.release]
strip = true
lto = true
opt-level = 3
